--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "express-favicon": "^2.0.0",
     "html-webpack-plugin": "^3.0.7",
     "isomorphic-unfetch": "^2.0.0",
     "mongoose": "^5.0.11",
