--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "recompose": "^0.26.0",
     "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0",
+    "serve-favicon": "^2.4.5",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
