--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "express-favicon": "^2.0.0",
+    "highcharts": "^6.0.7",
     "html-webpack-plugin": "^3.0.7",
     "isomorphic-unfetch": "^2.0.0",
     "mongoose": "^5.0.11",
@@ -45,6 +46,7 @@
     "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.4.5",
+    "socket.io": "^2.0.4",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
