--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config webpack.config.js",
-    "prestart": "babel server --out-dir lib/server && babel util --out-dir lib/util && babel components --out-dir lib/components",
+    "test": "set NODE_ENV=test&& mocha --timeout 3000 --recursive test",
+    "dev": "set NODE_ENV=development&& node lib/server/server.js",
+    "prestart": "babel server --out-dir lib/server && babel util --out-dir lib/util && babel components --out-dir lib/components && babel controllers --out-dir lib/controllers",
+    "predev": "babel server --out-dir lib/server && babel util --out-dir lib/util && babel components --out-dir lib/components && babel controllers --out-dir lib/controllers",
     "start": "node lib/server/server.js",
     "heroku-postbuild": "webpack -p --config webpack.prod.js --progress"
   },
@@ -26,26 +27,12 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
-    "connect-mongo": "^2.0.1",
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
-    "express-favicon": "^2.0.0",
-    "highcharts": "^6.0.7",
     "html-webpack-plugin": "^3.0.7",
-    "isomorphic-unfetch": "^2.0.0",
     "mongoose": "^5.0.11",
     "normalize.css": "^8.0.0",
-    "path": "^0.12.7",
-    "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-jss": "^8.3.5",
-    "react-redux": "^5.0.7",
-    "recompose": "^0.26.0",
-    "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.2.0",
-    "serve-favicon": "^2.4.5",
     "socket.io": "^2.0.4",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
@@ -53,5 +40,10 @@
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
     "webpack-hot-middleware": "^2.21.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.0.5"
   }
 }
