--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   },
   "main": "index.js",
   "scripts": {
-    "prestart": "babel server --out-dir lib/server && babel util --out-dir lib/util && babel components --out-dir lib/components && babel controllers --out-dir lib/controllers",
     "predev": "babel server --out-dir lib/server && babel util --out-dir lib/util && babel components --out-dir lib/components && babel controllers --out-dir lib/controllers",
     "pretest": "babel server --out-dir lib/server && babel util --out-dir lib/util && babel components --out-dir lib/components && babel controllers --out-dir lib/controllers && babel test --out-dir lib/test",
     "test": "set NODE_ENV=test&& mocha --compilers js:babel-core/register --require babel-polyfill --timeout 3000 --recursive lib/test",
     "dev": "set NODE_ENV=development&& node lib/server/server.js",
     "start": "node lib/server/server.js",
-    "heroku-postbuild": "webpack -p --config webpack.prod.js --progress"
+    "heroku-postbuild": "webpack -p --config webpack.prod.js --progress && babel server --out-dir lib/server && babel util --out-dir lib/util && babel components --out-dir lib/components && babel controllers --out-dir lib/controllers"
   },
   "author": "ghajl",
   "license": "ISC",
