--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
+    "vex-js": "^4.1.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
     "webpack-hot-middleware": "^2.21.2"
@@ -46,7 +47,6 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.0.0",
-    "jquery": "^3.3.1",
     "jsdom": "^11.7.0",
     "mocha": "^5.0.5",
     "mock-socket": "^7.1.0"
