--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "pretest": "babel server --out-dir lib/server && babel app --out-dir lib/app && babel test --out-dir lib/test",
     "test": "set NODE_ENV=test&& mocha --compilers js:babel-core/register --require babel-polyfill --timeout 3000 --recursive lib/test",
     "dev": "set NODE_ENV=development&& node lib/server/server.js",
-    "start": "node lib/server/server.js",
-    "heroku-postbuild": "webpack -p --config webpack.prod.js --progress && babel server --out-dir lib/server && babel app --out-dir lib/app"
+    "start": "webpack --mode production && node lib/server/server.js",
+    "heroku-postbuild": "webpack --mode production && babel server --out-dir lib/server && babel app --out-dir lib/app",
+    "build": "webpack --mode production"
   },
   "author": "ghajl",
   "license": "ISC",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "dependencies": {
+    "autoprefixer": "^8.6.2",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -25,22 +31,25 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
+    "clean-webpack-plugin": "^0.1.19",
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.0.7",
+    "mini-css-extract-plugin": "^0.4.0",
     "mongoose": "^5.0.11",
+    "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
+    "postcss-loader": "^2.1.5",
+    "sass-loader": "^7.0.3",
     "socket.io": "^2.0.4",
     "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "^1.0.1",
     "vex-js": "^4.1.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.4",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.21.2"
   },
   "devDependencies": {
