--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
   "presets":[
-    "env"
+    ["@babel/env", { useBuiltIns: "usage", corejs: { version: 3, proposals: true } }],
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread"
   ]
 }
