--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
   },
   "main": "index.js",
   "scripts": {
-    "predev": "babel server --out-dir lib/server && babel app --out-dir lib/app --ignore chart.js,main.js,api.js,db.js,message.js",
-    "pretest": "babel server --out-dir lib/server && babel app --out-dir lib/app && babel test --out-dir lib/test",
-    "test": "set NODE_ENV=test&& mocha --compilers js:babel-core/register --require babel-polyfill --timeout 3000 --recursive lib/test",
-    "dev": "set NODE_ENV=development&& node lib/server/server.js",
+    "dev": "set NODE_ENV=development&& webpack --mode development --watch",
     "start": "node lib/server/server.js",
-    "heroku-postbuild": "webpack --mode production && babel server --out-dir lib/server && babel app --out-dir lib/app --ignore chart.js,main.js,api.js,db.js,message.js"
+    "heroku-postbuild": "webpack --mode production"
   },
   "author": "ghajl",
   "license": "ISC",
@@ -21,35 +18,38 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
     "autoprefixer": "^8.6.2",
-    "axios": "^0.18.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
     "clean-webpack-plugin": "^0.1.19",
+    "core-js": "^3.4.2",
     "cors": "^2.8.4",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.0.7",
+    "iexcloud_api_wrapper": "^1.1.5",
     "mini-css-extract-plugin": "^0.4.0",
-    "mongoose": "^5.0.11",
-    "node-sass": "^4.9.0",
+    "mongoose": "^5.7.12",
+    "node-sass": "^4.13.0",
+    "nodemon-webpack-plugin": "^4.2.1",
     "normalize.css": "^8.0.0",
-    "postcss-loader": "^2.1.5",
+    "postcss-loader": "^2.1.6",
     "sass-loader": "^7.0.3",
     "socket.io": "^2.0.4",
     "style-loader": "^0.20.3",
     "vex-js": "^4.1.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.4",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.21.2"
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
